--- a/index.ipynb
+++ b/index.ipynb
@@ -143,12 +143,12 @@
     }
    ],
    "source": [
-    "raw.head()"
+    "raw['Dat']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -181,248 +181,248 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1981-01-01</th>\n",
-       "      <td>NaN</td>\n",
+       "      <th>1/1/81</th>\n",
+       "      <td>20.7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1981-02-01</th>\n",
-       "      <td>NaN</td>\n",
+       "      <th>2/1/81</th>\n",
+       "      <td>17.9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1981-03-01</th>\n",
-       "      <td>NaN</td>\n",
+       "      <th>3/1/81</th>\n",
+       "      <td>18.8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1981-04-01</th>\n",
-       "      <td>NaN</td>\n",
+       "      <th>4/1/81</th>\n",
+       "      <td>14.6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1981-05-01</th>\n",
-       "      <td>NaN</td>\n",
+       "      <th>5/1/81</th>\n",
+       "      <td>15.8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1981-06-01</th>\n",
-       "      <td>NaN</td>\n",
+       "      <th>6/1/81</th>\n",
+       "      <td>15.8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1981-07-01</th>\n",
-       "      <td>NaN</td>\n",
+       "      <th>7/1/81</th>\n",
+       "      <td>15.8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1981-08-01</th>\n",
-       "      <td>NaN</td>\n",
+       "      <th>8/1/81</th>\n",
+       "      <td>17.4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1981-09-01</th>\n",
-       "      <td>NaN</td>\n",
+       "      <th>9/1/81</th>\n",
+       "      <td>21.8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1981-10-01</th>\n",
-       "      <td>NaN</td>\n",
+       "      <th>10/1/81</th>\n",
+       "      <td>20.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1981-11-01</th>\n",
-       "      <td>NaN</td>\n",
+       "      <th>11/1/81</th>\n",
+       "      <td>16.2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1981-12-01</th>\n",
-       "      <td>NaN</td>\n",
+       "      <th>12/1/81</th>\n",
+       "      <td>13.3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1981-01-13</th>\n",
-       "      <td>NaN</td>\n",
+       "      <th>13/1/81</th>\n",
+       "      <td>16.7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1981-01-14</th>\n",
-       "      <td>NaN</td>\n",
+       "      <th>14/1/81</th>\n",
+       "      <td>21.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1981-01-15</th>\n",
-       "      <td>NaN</td>\n",
+       "      <th>15/1/81</th>\n",
+       "      <td>25.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1981-01-16</th>\n",
-       "      <td>NaN</td>\n",
+       "      <th>16/1/81</th>\n",
+       "      <td>20.7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1981-01-17</th>\n",
-       "      <td>NaN</td>\n",
+       "      <th>17/1/81</th>\n",
+       "      <td>20.6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1981-01-18</th>\n",
-       "      <td>NaN</td>\n",
+       "      <th>18/1/81</th>\n",
+       "      <td>24.8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1981-01-19</th>\n",
-       "      <td>NaN</td>\n",
+       "      <th>19/1/81</th>\n",
+       "      <td>17.7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1981-01-20</th>\n",
-       "      <td>NaN</td>\n",
+       "      <th>20/1/81</th>\n",
+       "      <td>15.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1981-01-21</th>\n",
-       "      <td>NaN</td>\n",
+       "      <th>21/1/81</th>\n",
+       "      <td>18.2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1981-01-22</th>\n",
-       "      <td>NaN</td>\n",
+       "      <th>22/1/81</th>\n",
+       "      <td>12.1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1981-01-23</th>\n",
-       "      <td>NaN</td>\n",
+       "      <th>23/1/81</th>\n",
+       "      <td>14.4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1981-01-24</th>\n",
-       "      <td>NaN</td>\n",
+       "      <th>24/1/81</th>\n",
+       "      <td>16.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1981-01-25</th>\n",
-       "      <td>NaN</td>\n",
+       "      <th>25/1/81</th>\n",
+       "      <td>16.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1981-01-26</th>\n",
-       "      <td>NaN</td>\n",
+       "      <th>26/1/81</th>\n",
+       "      <td>18.7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1981-01-27</th>\n",
-       "      <td>NaN</td>\n",
+       "      <th>27/1/81</th>\n",
+       "      <td>19.4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1981-01-28</th>\n",
-       "      <td>NaN</td>\n",
+       "      <th>28/1/81</th>\n",
+       "      <td>17.2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1981-01-29</th>\n",
-       "      <td>NaN</td>\n",
+       "      <th>29/1/81</th>\n",
+       "      <td>15.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1981-01-30</th>\n",
-       "      <td>NaN</td>\n",
+       "      <th>30/1/81</th>\n",
+       "      <td>15.1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1990-02-12</th>\n",
-       "      <td>NaN</td>\n",
+       "      <th>2/12/90</th>\n",
+       "      <td>13.2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1990-03-12</th>\n",
-       "      <td>NaN</td>\n",
+       "      <th>3/12/90</th>\n",
+       "      <td>16.2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1990-04-12</th>\n",
-       "      <td>NaN</td>\n",
+       "      <th>4/12/90</th>\n",
+       "      <td>17.3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1990-05-12</th>\n",
-       "      <td>NaN</td>\n",
+       "      <th>5/12/90</th>\n",
+       "      <td>20.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1990-06-12</th>\n",
-       "      <td>NaN</td>\n",
+       "      <th>6/12/90</th>\n",
+       "      <td>20.2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1990-07-12</th>\n",
-       "      <td>NaN</td>\n",
+       "      <th>7/12/90</th>\n",
+       "      <td>19.4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1990-08-12</th>\n",
-       "      <td>NaN</td>\n",
+       "      <th>8/12/90</th>\n",
+       "      <td>15.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1990-09-12</th>\n",
-       "      <td>NaN</td>\n",
+       "      <th>9/12/90</th>\n",
+       "      <td>14.1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1990-10-12</th>\n",
-       "      <td>NaN</td>\n",
+       "      <th>10/12/90</th>\n",
+       "      <td>11.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1990-11-12</th>\n",
-       "      <td>NaN</td>\n",
+       "      <th>11/12/90</th>\n",
+       "      <td>11.1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1990-12-12</th>\n",
-       "      <td>NaN</td>\n",
+       "      <th>12/12/90</th>\n",
+       "      <td>14.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1990-12-13</th>\n",
-       "      <td>NaN</td>\n",
+       "      <th>13/12/90</th>\n",
+       "      <td>11.4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1990-12-14</th>\n",
-       "      <td>NaN</td>\n",
+       "      <th>14/12/90</th>\n",
+       "      <td>12.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1990-12-15</th>\n",
-       "      <td>NaN</td>\n",
+       "      <th>15/12/90</th>\n",
+       "      <td>13.4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1990-12-16</th>\n",
-       "      <td>NaN</td>\n",
+       "      <th>16/12/90</th>\n",
+       "      <td>13.6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1990-12-17</th>\n",
-       "      <td>NaN</td>\n",
+       "      <th>17/12/90</th>\n",
+       "      <td>13.9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1990-12-18</th>\n",
-       "      <td>NaN</td>\n",
+       "      <th>18/12/90</th>\n",
+       "      <td>17.2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1990-12-19</th>\n",
-       "      <td>NaN</td>\n",
+       "      <th>19/12/90</th>\n",
+       "      <td>14.7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1990-12-20</th>\n",
-       "      <td>NaN</td>\n",
+       "      <th>20/12/90</th>\n",
+       "      <td>15.4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1990-12-21</th>\n",
-       "      <td>NaN</td>\n",
+       "      <th>21/12/90</th>\n",
+       "      <td>13.1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1990-12-22</th>\n",
-       "      <td>NaN</td>\n",
+       "      <th>22/12/90</th>\n",
+       "      <td>13.2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1990-12-23</th>\n",
-       "      <td>NaN</td>\n",
+       "      <th>23/12/90</th>\n",
+       "      <td>13.9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1990-12-24</th>\n",
-       "      <td>NaN</td>\n",
+       "      <th>24/12/90</th>\n",
+       "      <td>10.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1990-12-25</th>\n",
-       "      <td>NaN</td>\n",
+       "      <th>25/12/90</th>\n",
+       "      <td>12.9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1990-12-26</th>\n",
-       "      <td>NaN</td>\n",
+       "      <th>26/12/90</th>\n",
+       "      <td>14.6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1990-12-27</th>\n",
-       "      <td>NaN</td>\n",
+       "      <th>27/12/90</th>\n",
+       "      <td>14.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1990-12-28</th>\n",
-       "      <td>NaN</td>\n",
+       "      <th>28/12/90</th>\n",
+       "      <td>13.6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1990-12-29</th>\n",
-       "      <td>NaN</td>\n",
+       "      <th>29/12/90</th>\n",
+       "      <td>13.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1990-12-30</th>\n",
-       "      <td>NaN</td>\n",
+       "      <th>30/12/90</th>\n",
+       "      <td>15.7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1990-12-31</th>\n",
-       "      <td>NaN</td>\n",
+       "      <th>31/12/90</th>\n",
+       "      <td>13.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -430,80 +430,80 @@
        "</div>"
       ],
       "text/plain": [
-       "            Daily_min\n",
-       "Date                 \n",
-       "1981-01-01        NaN\n",
-       "1981-02-01        NaN\n",
-       "1981-03-01        NaN\n",
-       "1981-04-01        NaN\n",
-       "1981-05-01        NaN\n",
-       "1981-06-01        NaN\n",
-       "1981-07-01        NaN\n",
-       "1981-08-01        NaN\n",
-       "1981-09-01        NaN\n",
-       "1981-10-01        NaN\n",
-       "1981-11-01        NaN\n",
-       "1981-12-01        NaN\n",
-       "1981-01-13        NaN\n",
-       "1981-01-14        NaN\n",
-       "1981-01-15        NaN\n",
-       "1981-01-16        NaN\n",
-       "1981-01-17        NaN\n",
-       "1981-01-18        NaN\n",
-       "1981-01-19        NaN\n",
-       "1981-01-20        NaN\n",
-       "1981-01-21        NaN\n",
-       "1981-01-22        NaN\n",
-       "1981-01-23        NaN\n",
-       "1981-01-24        NaN\n",
-       "1981-01-25        NaN\n",
-       "1981-01-26        NaN\n",
-       "1981-01-27        NaN\n",
-       "1981-01-28        NaN\n",
-       "1981-01-29        NaN\n",
-       "1981-01-30        NaN\n",
-       "...               ...\n",
-       "1990-02-12        NaN\n",
-       "1990-03-12        NaN\n",
-       "1990-04-12        NaN\n",
-       "1990-05-12        NaN\n",
-       "1990-06-12        NaN\n",
-       "1990-07-12        NaN\n",
-       "1990-08-12        NaN\n",
-       "1990-09-12        NaN\n",
-       "1990-10-12        NaN\n",
-       "1990-11-12        NaN\n",
-       "1990-12-12        NaN\n",
-       "1990-12-13        NaN\n",
-       "1990-12-14        NaN\n",
-       "1990-12-15        NaN\n",
-       "1990-12-16        NaN\n",
-       "1990-12-17        NaN\n",
-       "1990-12-18        NaN\n",
-       "1990-12-19        NaN\n",
-       "1990-12-20        NaN\n",
-       "1990-12-21        NaN\n",
-       "1990-12-22        NaN\n",
-       "1990-12-23        NaN\n",
-       "1990-12-24        NaN\n",
-       "1990-12-25        NaN\n",
-       "1990-12-26        NaN\n",
-       "1990-12-27        NaN\n",
-       "1990-12-28        NaN\n",
-       "1990-12-29        NaN\n",
-       "1990-12-30        NaN\n",
-       "1990-12-31        NaN\n",
+       "          Daily_min\n",
+       "Date               \n",
+       "1/1/81         20.7\n",
+       "2/1/81         17.9\n",
+       "3/1/81         18.8\n",
+       "4/1/81         14.6\n",
+       "5/1/81         15.8\n",
+       "6/1/81         15.8\n",
+       "7/1/81         15.8\n",
+       "8/1/81         17.4\n",
+       "9/1/81         21.8\n",
+       "10/1/81        20.0\n",
+       "11/1/81        16.2\n",
+       "12/1/81        13.3\n",
+       "13/1/81        16.7\n",
+       "14/1/81        21.5\n",
+       "15/1/81        25.0\n",
+       "16/1/81        20.7\n",
+       "17/1/81        20.6\n",
+       "18/1/81        24.8\n",
+       "19/1/81        17.7\n",
+       "20/1/81        15.5\n",
+       "21/1/81        18.2\n",
+       "22/1/81        12.1\n",
+       "23/1/81        14.4\n",
+       "24/1/81        16.0\n",
+       "25/1/81        16.5\n",
+       "26/1/81        18.7\n",
+       "27/1/81        19.4\n",
+       "28/1/81        17.2\n",
+       "29/1/81        15.5\n",
+       "30/1/81        15.1\n",
+       "...             ...\n",
+       "2/12/90        13.2\n",
+       "3/12/90        16.2\n",
+       "4/12/90        17.3\n",
+       "5/12/90        20.5\n",
+       "6/12/90        20.2\n",
+       "7/12/90        19.4\n",
+       "8/12/90        15.5\n",
+       "9/12/90        14.1\n",
+       "10/12/90       11.0\n",
+       "11/12/90       11.1\n",
+       "12/12/90       14.0\n",
+       "13/12/90       11.4\n",
+       "14/12/90       12.5\n",
+       "15/12/90       13.4\n",
+       "16/12/90       13.6\n",
+       "17/12/90       13.9\n",
+       "18/12/90       17.2\n",
+       "19/12/90       14.7\n",
+       "20/12/90       15.4\n",
+       "21/12/90       13.1\n",
+       "22/12/90       13.2\n",
+       "23/12/90       13.9\n",
+       "24/12/90       10.0\n",
+       "25/12/90       12.9\n",
+       "26/12/90       14.6\n",
+       "27/12/90       14.0\n",
+       "28/12/90       13.6\n",
+       "29/12/90       13.5\n",
+       "30/12/90       15.7\n",
+       "31/12/90       13.0\n",
        "\n",
        "[3650 rows x 1 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "raw.set_index()"
+    "raw.set_index('Date')"
    ]
   },
   {
